Disable PWA window popout menu option for incognito tabs

There's no UX on a PWA window to indicate incognito status, disable
the ability to get in this situation (also it DCHECKs).

Bug: 843869
Change-Id: I6b48258dfbe118ea67aae9b9a5375b198eaa4e75
Reviewed-on: https://chromium-review.googlesource.com/1062991
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559426}
Former-commit-id: 403cebbdd5132b65b7958ec0fff2f85d08055e34